[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/Slime.gd" type="Script" id=1]
[ext_resource path="res://GFX/Enemies/StandardSlime.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 69.0
height = 88.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 77.0
height = 88.0

[node name="Slime" type="KinematicBody2D" groups=["Enemies"]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 31
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 51 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( 0, 48 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="HurtTimer" type="Timer" parent="." groups=["Enemies"]]
one_shot = true

[connection signal="body_entered" from="HurtArea" to="." method="_on_HurtArea_body_entered"]
[connection signal="body_exited" from="HurtArea" to="." method="_on_HurtArea_body_exited"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
